fix improperly closed notes, change code title, temp work around for tables on mobile

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -17,7 +17,7 @@
   @apply prose-ol:mt-0 prose-ul:mt-0 prose-li:my-1;
   @apply prose-h2:border-b prose-h2:pb-2 prose-h2:border-white prose-h2:border-opacity-20;
   @apply prose-h3:border-b prose-h3:pb-2 prose-h3:border-white prose-h3:border-opacity-20;
-  @apply prose-thead:rounded-lg prose-th:p-2 prose-th:text-left prose-thead:bg-stone-800 prose-td:p-2 prose-tr:bg-stone-600/10;
+  @apply prose-thead:rounded-lg prose-th:p-2 prose-th:text-left prose-thead:bg-stone-800 prose-td:p-2 prose-tr:bg-stone-600/10 prose-table:w-screen prose-table:overflow-x-auto;
 }
 
 ::-webkit-scrollbar {
@@ -33,7 +33,7 @@
 }
 
 .remark-code-title {
-  @apply text-sm font-mono font-bold uppercase bg-[#322931] py-1 px-2 rounded-md absolute -translate-y-1/2;
+  @apply text-sm font-mono font-bold uppercase bg-[#322931] py-1 px-2 rounded-md -mb-4 w-fit;
 }
 
 /* Admonition styles */
@@ -47,6 +47,10 @@
 }
 .admonition-heading h5 a[aria-hidden="true"] {
   @apply hidden;
+}
+
+.admonition-content p {
+  @apply m-0;
 }
 
 .admonition-icon {
